[metadata]
name = icpdas-pet7018z
version = 0.0.1
author = James Ball
description = ICP DAS PET-7018Z/ET-7018Z control library
long_description = file: README.md
classifiers =
    License :: OSI Approved :: GPL-3.0
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9    
project_urls =
    homepage = https://github.com/jmball/icpdas-pet7018z

[options]
packages = find:
install_requires =
    pyModbusTCP
python_requires = >=3.6
package_dir =
    =src

[options.packages.find]
where = src